--- a/08-MY451_8.rmd
+++ b/08-MY451_8.rmd
@@ -544,7 +544,6 @@ the correlation of any variable with itself is 1, which is true by
 definition and thus of no real interest.
 
   ------------------------------------ -------------------------------- ------- ------- ----------- -------- -------
-                                         \multicolumn{6}{|c|}{Variable}                                      
                               Variable                              GDP    Gini   Pol.    Corrupt.    School     IMR
                 GDP per capita \[GDP\]                                1   -0.39    0.51        0.77     0.42   -0.62
             Income inequality \[Gini\]                            -0.39       1   -0.15       -0.27    -0.27    0.42
@@ -654,39 +653,21 @@ line for the points.<span
 data-label="f_imr1"></span>](imr1){width="13.5cm"}
 
   ------------------------------------------------------------------ ------------------------------- ----------- ------------ ------------
-                                                                       \multicolumn{4}{c|}{Variable}                          
-
-                                                                                                          School   Control of       Income
-
+  \                                                                                                \      School   Control of       Income
                                                                                                  IMR   enrolment   corruption   inequality
-
-  \multicolumn{5}{l}{*Summary statistics*}                                                                               
-
+  *Summary statistics*
   Mean                                                                                           4.3        86.1         50.1         40.5
-
   std. deviation                                                                                 4.0        16.7         28.4         10.2
-
   Minimum                                                                                        0.3        30.0          3.6         24.4
-
   Maximum                                                                                       15.6       109.0        100.0         70.7
-
-  \multicolumn{5}{l}{*Correlation matrix*}                                                                               
-
+  *Correlation matrix*
   IMR                                                                                              1       -0.75        -0.60         0.39
-
   School enrolment                                                                             -0.75           1         0.39        -0.27
-
   Control of corruption                                                                        -0.60        0.39            1        -0.27
-
   Income inequality                                                                             0.39       -0.27        -0.27            1
-
-  \multicolumn{5}{l}{*Means for countries in different income                                                            
-  categories*}                                                                                                                
-
+  *Means for countries in different income categories*
   Low income ($n=41$)                                                                            8.2        72.1         27.5         41.7
-
   Middle income ($n=48$)                                                                         2.8        92.5         50.8         43.3
-
   High income ($n=22$)                                                                           0.5        98.4         90.7         32.0
   ------------------------------------------------------------------ ------------------------------- ----------- ------------ ------------
 
@@ -1550,20 +1531,18 @@ Presenting raw computer output such as that in Figure
 \ref{f_spss_linreg} is normally not appropriate in formal research
 reports.
 
-  \multicolumn{6}{|l|}{Response variable: Infant Mortality Rate (\%)}                                                        
   ----------------------------------------------------------------------------- ------------- ---------- ------- ----------- -------------------
-  Explanatory                                                                                   Standard                       95 % Confidence
+  Explanatory                                                                               \   Standard       \           \   95 % Confidence
   variable                                                                        Coefficient      error     $t$   $P$-value      interval
   Constant                                                                              16.40                                
   School enrolment (%)                                                                 -0.139      0.014   -9.87    $<0.001$  (-0.167; -0.111 )
   Control of corruption                                                                -0.046      0.008   -5.53    $<0.001$  (-0.062; -0.029)
   Income inequality                                                                     0.055      0.022    2.50       0.014   (0.011; 0.098)
-  \multicolumn{6}{|l|}{}                                                                                     
-  \multicolumn{6}{|l|}{$\hat{\sigma}=2.23$; $R^{2}=0.692$; $n=111$; $df=107$}                                                
+  ----------------------------------------------------------------------------- ------------- ---------- ------- ----------- -------------------
 
-  : Results for a linear regression model for Infant mortality rate
+  : Response variable: Infant Mortality Rate (\%). Results for a linear regression model for Infant mortality rate
   given three explanatory variables in the Global Civil Society
-  data.<span data-label="t_imr_m2"></span>
+  data. $\hat{\sigma}=2.23$; $R^{2}=0.692$; $n=111$; $df=107$<span data-label="t_imr_m2"></span>
 
 ### Definition of the model {#ss_regression_multiple_def}
 
@@ -1977,42 +1956,26 @@ explanatory variables are dummy variables. The only aspect which
 requires some further explanation is the interpretation of the
 coefficients of the dummy variables.
 
-  ----------------------------------------------------------------------------------------------------------------------------------
-  \multicolumn{6}{|l|}{Response variable: Infant Mortality Rate (\%)}                                               
   --------------------------------------------------------------------- ------------- ------- --------- ----------- ----------------
-  Explanatory                                                                           Std.                          95 % Conf. 
-
-  variable                                                                Coefficient   error       $t$   $P$-value     interval
-
+  Explanatory variable                                                              \    Std.         \           \    95 % Conf. 
+                                                                          Coefficient   error       $t$   $P$-value     interval
   Constant                                                                      12.00                               
-
   School enrolment (%)                                                       $-0.091$   0.016   $-5.69$    $<0.001$    $(-0.123;
                                                                                                                         -0.059)$
-
   Control of corruption                                                      $-0.020$   0.011   $-1.75$     $0.083$    $(-0.043;
                                                                                                                         0.003)$
-
   Income inequality                                                             0.080   0.021      3.75    $<0.001$  (0.038; 0.122)
-
   Income level                                                                                                      
-
   (Reference group: Low)                                                                                            
-
   Middle                                                                     $-3.210$   0.631   $-5.09$    $<0.001$    $(-4.461;
                                                                                                                         -1.958)$
-
   High                                                                       $-3.296$   1.039   $-3.17$       0.002    $(-5.357;
                                                                                                                         -1.235)$
-
-  \multicolumn{6}{|l|}{}                                                                            
-
-  \multicolumn{6}{|l|}{                                                                                             
-  $\hat{\sigma}=2.01$; $R^{2}=0.753$; $n=111$; $df=105$}                                                            
   ----------------------------------------------------------------------------------------------------------------------------------
 
-  : Results for a linear regression model for Infant mortality rate in
+  : Response variable: Infant Mortality Rate (\%). Results for a linear regression model for Infant mortality rate in
   the Global Civil Society data, given the three explanatory variables
-  in Table \ref{t_imr_m2} and Income level in three groups.<span
+  in Table \ref{t_imr_m2} and Income level in three groups. $\hat{\sigma}=2.01$; $R^{2}=0.753$; $n=111$; $df=105$.<span
   data-label="t_imr_m3"></span>
 
 Recall that the regression coefficient of a continuous explanatory
@@ -2256,98 +2219,51 @@ over the study period. Summary statistics for the variables are shown in
 Table \ref{t_fastfood_descr}.
 
   ---------------------------------------- ------ ------- --------------------------------------------- -------------- ------------
-                                                            \multicolumn{2}{|c|}{Minimum wage variable}    Response    
-
-  \cline{4-5}                                                                                  Affected    Wage gap     variable:
-
+  \                                             \       \                                       Minimum wage variable    Response    
+                                                                                               Affected    Wage gap     variable:
                                                                                                           (mean for     Employment
-
                                                                                                            affected       change
-
   Group                                         %   $(n)$                                       % ($n$)  restaurants)     (mean)
-
   Overall                                     100   (368)                                    72.8 (268)     0.115        $-0.30$
-
   Ownership                                                                                                            
-
   Franchisee                                 64.7   (238)                                    71.8 (171)     0.122        $-0.17$
-
   Company                                    35.3   (130)                                     74.6 (97)     0.103        $-0.52$
-
   Chain                                                                                                                
-
   Burger King                                41.0   (151)                                    73.5 (111)     0.129        $+0.02$
-
   Roy Rogers                                 24.7    (91)                                     72.5 (66)     0.104        $-1.89$
-
   Wendy’s                                    13.0    (48)                                     60.4 (29)     0.086        $-0.28$
-
   KFC                                        21.2    (78)                                     79.5 (62)     0.117        $+0.94$
-
-  \hline\multicolumn{6}{|l|}{                                                                                          
-  Mean employment change}                                                                                              
-
-  \multicolumn{6}{|l|}{                                                                                                
-
-  Among unaffected restaurants: $-2.93$}                                                                               
-
-  \multicolumn{6}{|l|}{                                                                                                
-
-  Among affected restaurants: $+0.68$}                                                                                 
   ---------------------------------------- ------ ------- --------------------------------------------- -------------- ------------
 
   : Summary statistics for the variables considered in the minimum wage
-  example of Section \ref{ss_regression_dummies_example}.<span
+  example of Section \ref{ss_regression_dummies_example}. Mean employment change: Among unaffected restaurants: $-2.93$; Among affected restaurants: $+0.68$.<span
   data-label="t_fastfood_descr"></span>
 
-  ----------------------------------------------------------------------------------------------------------------------------------------------------
-  \multicolumn{5}{|l|}{Response                                                                                                            
-  variable: Change in Full-time equivalent employment}                                                                                     
   ------------------------------------------------------ --------------------------------- --------------------------------- ------------- -----------
-                                                           \multicolumn{2}{|c|}{Model (1)}   \multicolumn{2}{|c|}{Model (2)}               
-
+  \                                                                              Model (1)                                 \     Model (2)           \
                                                                                Coefficient                             ($t$)   Coefficient       ($t$)
-
   Variable                                                                     (std error)                         $P$-value   (std error)   $P$-value
-
   Constant                                                                                                                                 
-
                                                                                      -2.63                                           -1.54
-
   Affected by the increase                                                            3.56                            (3.50)             —           —
-
                                                                                     (1.02)                             0.001             —           —
-
   Wage gap                                                                               —                                 —         15.88      (2.63)
-
                                                                                          —                                 —        (6.04)       0.009
-
   Ownership (vs. Franchisee)                                                                                                               
-
   Company                                                                             0.22                            (0.20)          0.43      (0.40)
-
                                                                                     (1.06)                              0.84        (1.07)        0.69
-
   Chain (vs. Burger King)                                                                                                                  
-
   Roy Rogers                                                                         -2.00                           (-1.56)         -1.84     (-1.43)
-
                                                                                     (1.28)                              0.12        (1.29)        0.15
-
   Wendy’s                                                                             0.15                            (0.11)          0.36      (0.24)
-
                                                                                     (1.44)                              0.92        (1.46)        0.81
-
   KFC                                                                                 0.64                            (0.51)          0.81      (0.64)
-
                                                                                     (1.25)                              0.61        (1.26)        0.52
-
-
 
   $R^{2}$                                                                            0.046                                           0.032
   ----------------------------------------------------------------------------------------------------------------------------------------------------
 
-  : Two fitted models for Employment change given exposure to minimum
+  : Response variable: Change in Full-time equivalent employment. Two fitted models for Employment change given exposure to minimum
   wage increase and control variables. See the text for further
   details.<span data-label="t_fastfood_models"></span>
 
